[package]
name = "s7"
version = "0.1.8"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A simple library that can be used to communicate with Siemens S7 family PLC devices"
keywords = ["siemens", "s7", "plc"]
license-file = "LICENSE.md"
repository = "https://github.com/petar-dambovaliev/s7"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"